--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Extensions\TextSpanExtensions.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForLocalFunctions.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\OutVariables\BaseUseOutVariables.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\OutVariables\DiscardOutVariablesInMethodInvocations.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\OutVariables\UseOutVariablesInObjectCreations.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\OutVariables\UseOutVariablesInMethodInvocations.cs" />
     <Compile Include="SharpenSuggestions\CSharp71\DefaultExpressions\BaseUseDefaultExpressionInOptionalParameters.cs" />
