--- a/tests/smoke/CSharp70/CSharp70.csproj
+++ b/tests/smoke/CSharp70/CSharp70.csproj
@@ -68,6 +68,7 @@
     <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessorsInProperties\EmptyGetAccessors.cs" />
+    <Compile Include="DiscardOutVariablesInMethodInvocations\MethodInvocationsThatAreCandidatesToDiscardOutVariables.cs" />
     <Compile Include="UseOutVariablesInObjectCreations\ObjectCreationsThatAreCandidatesToHaveOutVariables.cs" />
     <Compile Include="UseOutVariablesInObjectCreations\ObjectCreationsThatAreNotCandidatesToHaveOutVariables.cs" />
     <Compile Include="UseOutVariablesInObjectCreations\OutInConstructorsClass.cs" />
